GNOME Bugzilla – Bug 669927
Save current entry after a timeout
Last modified: 2012-03-25 09:28:15 UTC
Currently the current diary entry is only saved when Almanah is closed, or the view is switched to a different diary entry. It would be good to also save the current diary entry after an inactivity timeout, just in case the user keeps one diary entry open (for example) for an entire day.
commit 7501b26e7414d95d55f57bd497cc034ba9dfc76c Author: Philip Withnall <philip@tecnocode.co.uk> Date: Sun Mar 25 10:17:01 2012 +0100 Bug 669927 — Save current entry after a timeout Save the current entry every 10 minutes, to deal with the situation where a user keeps the same entry open all day, periodically adding to it. Closes: https://bugzilla.gnome.org/show_bug.cgi?id=669927 src/main-window.c | 38 ++++++++++++++++++++++++++++++++++---- 1 files changed, 34 insertions(+), 4 deletions(-)