Bug 669927 — Save current entry after a timeout

Save the current entry every 10 minutes, to deal with the situation where
a user keeps the same entry open all day, periodically adding to it.

Closes: https://bugzilla.gnome.org/show_bug.cgi?id=669927